<resources>
    <!--General purpose strings-->
    <string name="deadline_percentage">%.2f%%</string>

    <!--Screen titles-->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_changelog">Changelog</string>
    <string name="title_activity_widget_guide">Add widget</string>
    <string name="title_activity_payment">Get Pro</string>
    <string name="title_activity_licences">Open source libraries</string>

    <!--Dashboard-->
    <string name="dashboard_no_deadline_message">There is nothing to display!</string>
    <string name="dashboard_error_loading_deadline">Opps! Something went wong!</string>

    <!--Bottom navigation titles-->
    <string name="navigation_title_feedback">Feedback</string>
    <string name="navigation_title_debug_info" translatable="false">Debug Info</string>
    <string name="navigation_title_settings">Settings</string>

    <!--Preference titles-->
    <string name="about_header">About</string>
    <string name="widget_header">Widget</string>
    <string name="pro_header">Pro Version</string>
    <string name="legal_header">Legal</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_buy_pro">Buy Pro version</string>
    <string name="pref_title_contact">Contact us</string>
    <string name="pref_title_privacy_policy">Privacy Policy</string>
    <string name="pref_title_changelog">Changelog</string>
    <string name="pref_title_sort_by">Sorting by</string>
    <string name="pref_title_dark_mode">Dark Mode</string>
    <string name="pref_title_time_format">Time format</string>
    <string name="pref_title_date_format">Date format</string>
    <string name="pref_title_open_source_licences">Open-source licences</string>
    <string name="pref_title_add_widget">Add home screen widget</string>
    <string name="pref_title_share_friend">Share with friends</string>
    <string name="pref_title_made_love_with_uk">Made with ❤ from UK 🇬🇧</string>
    <string-array name="date_format_titles">
        <item>01-Jan-2019</item>
        <item>01–01–2019</item>
        <item>01 Jan 2019</item>
        <item>01–21–2019</item>
        <item>Jan 21 2019</item>
        <item>Jan 21,2019</item>
    </string-array>
    <string-array name="date_format_values">
        <item>@string/dd_MMM_yyyy</item>
        <item>@string/dd_MM_yyyy</item>
        <item>@string/dd__MMM__yyyy</item>
        <item>@string/MM_dd_yyyy</item>
        <item>@string/MMM_dd_yyyy</item>
        <item>@string/MMM_dd__yyyy</item>
    </string-array>
    <string-array name="time_format_titles">
        <item>12 Hours (01:00 PM)</item>
        <item>24 Hours (13:00)</item>
    </string-array>
    <string-array name="time_format_values">
        <item>@string/hh_mm_a</item>
        <item>@string/hh_mm</item>
    </string-array>
    <string-array name="sort_order_titles">
        <item>By title (A - Z)</item>
        <item>By title (Z - A)</item>
        <item>By end time (Ascending)</item>
        <item>By end time (Descending)</item>
    </string-array>
    <string-array name="sort_order_values">
        <item>@string/order_title_a_to_z</item>
        <item>@string/order_title_z_to_a</item>
        <item>@string/order_end_time_ascending</item>
        <item>@string/order_end_time_descending</item>
    </string-array>
    <string-array name="night_theme_mode_values">
        <item>@string/dark_mode_on</item>
        <item>@string/dark_mode_off</item>
        <item>@string/dark_mode_system_default</item>
    </string-array>
    <string-array name="night_theme_mode_titles">
        <item>On</item>
        <item>Off</item>
        <item>System default</item>
    </string-array>

    <!--Deadline detail-->
    <string name="time_left_title">Time left:\n\n%d %s  %d %s  %d %s</string>
    <string name="deadline_delete_successful">Deleted successfully.</string>
    <string name="deadline_delete_error">Cannot delete deadline. Try again.</string>
    <string name="deadline_open_error">Cannot open deadline at this moment. Try again.</string>
    <string name="deadline_delete_confirmation_delete_title">Delete</string>
    <string name="deadline_delete_confirmation_message">Do you want to delete %s?</string>
    <string name="detail_deleting_deadline_message">Deleting…</string>
    <plurals name="days">
        <item quantity="zero">day</item>
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="zero">minute</item>
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="zero">hour</item>
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <string name="meu_title_pin_shortcut">Add to home screen</string>
    <string name="meu_title_delete">Delete</string>

    <!--Payment screen-->
    <string name="buy_now">Upgrade to Pro</string>
    <string name="pro_benefit_title">Upgrade to <b>PRO</b> to support further development and gain access to some great features:</string>
    <string name="purchase_successful">Purchased successful.</string>
    <string name="pro_benefit_change_color">Change the color of the deadline based on the priority.</string>
    <string name="pro_benefit_notification">Set multiple notifications to track multiple thresholds of your deadline.</string>
    <string name="pro_benefit_no_ads">No more ads</string>
    <string name="pro_benefit_support_dev">Support ongoing development</string>

    <!--App shortcuts-->
    <string name="app_shortcut_title_create_deadline_short">Add</string>
    <string name="app_shortcut_title_create_deadline_long">Add Deadline</string>
    <string name="app_shortcut_disable" translatable="false">Not available.</string><!--Max to chars-->

    <!--Rate us dialog-->
    <string name="rate_us_dialog_title">Rate us on Play store.</string>
    <string name="rate_us_dialog_message">Do you enjoy using Year in Progress? Consider rating us on the Google Play store and help us spread the word.</string>
    <string name="rate_us_dialog_positive_btn">Rate now</string>
    <string name="rate_us_dialog_negative_btn">Do it later</string>
    <string name="rate_us_dialog_neutral_btn">Never</string>

    <!--Edit screen-->
    <string name="edit_date_range_title">Date</string>
    <string name="edit_start_end_date_divider">to</string>
    <string name="edit_color_title">Color</string>
    <string name="edit_title_title">Title</string>
    <string name="edit_description_title">Description</string>
    <string name="deadline_saved_success">Deadline saved successfully.</string>
    <string name="error_invalid_deadline">Invalid deadline color.</string>
    <string name="error_start_date_after_end_date">Start date cannot be after the end date.</string>
    <string name="error_end_date_before_start_date">End date cannot be before the start date.</string>
    <string name="invalid_notification_percent">Invalid notification.</string>
    <string name="error_deadline_title_long">Title cannot be more than %d characters long.</string>
    <string name="error_deadline_description_long">Description cannot be more than %d characters long.</string>
    <string name="menu_title_save_deadline">Save</string>
    <string name="edit_deadline_discard_confirm_message">All of your changed will be lost. Do you want to exit?</string>
    <string name="edit_deadline_discard_btn_title">Discard</string>
    <string name="edit_deadline_dismiss_btn_title">Dismiss</string>
    <string name="edit_deadline_add_notification">Add notification</string>
    <string name="edit_notifications_title">Notifications</string>
    <string name="row_notification_time_text">Notify when %s is complete</string>
    <string name="set_notification_dialog_title">Set Notification</string>
    <string name="set_notification_dialog_summary">We will notify you when the deadline is %d%% complete.</string>
    <string name="error_webview">Cannot load the page. Check your internet connection.</string>
    <string name="deadline_notification_title">%s reached to %.2f%%</string>
    <string name="error_deadline_not_exist">Deadline doesn\'t exist.</string>
    <string name="edit_deadline_title_hint">(e.g. This financial year)</string>
    <string name="notification_subtitle">Tell application when to notify you.</string>
    <string name="color_subtitle">Choose the color to set the theme for your deadline. Spice it up!</string>
    <string name="description_subtitle">Add notes about your deadline. (Optional)</string>
    <string name="error_deadline_save">Cannot save the deadline info. Try again.</string>

    <!--Share dialog-->
    <string name="app_invite_message">Hey! I would like to invite you to use "%s" -Deadline Tracker- that I have been using on my phone lately. Check it out! Click here to download %s.</string>
    <string name="app_invitation_title" translatable="false">Invitation to install "%s" -Deadline Tracker</string>

    <!--In-App Update-->
    <string name="retry">Retry</string>
    <string name="install_now">Install Now</string>
    <string name="download">Download</string>
    <string name="message_new_update_available">New update available.</string>
    <string name="message_app_update_downloaded">An update has just been downloaded.</string>
    <string name="error_message_in_app_review">Error occurred while preparing for review.</string>

    <!--Widget config activity-->
    <string name="time_left_widget">%dd %dh %dm</string>
    <string name="widget_config_content_heading">Select content to show :</string>
    <string name="widget_config_theme_heading">Select background theme :</string>
    <string name="widget_config_content_percent">Percent</string>
    <string name="widget_config_content_time_left">Time left</string>
    <string name="widget_config_theme_light">Light</string>
    <string name="widget_config_theme_dark">Dark</string>
    <string name="widget_config_apply_btn">Apply</string>
    <!--TODO: Categorize the strings-->
</resources>
